changed layout and fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
 	text-align: center;
 }
 
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
 .App-header {
 	background-color: #282c34;
 	height: 3vh;
@@ -22,20 +11,6 @@
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
 	color: white;
-}
-
-.App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-
-	to {
-		transform: rotate(360deg);
-	}
 }
 
 .instructionblurb {
@@ -55,7 +30,6 @@
 .gallery {
 	width: fit-content;
 	margin: 0 auto;
-	/* display: flex; */
 }
 
 .gallery .btnDiv {
@@ -71,7 +45,6 @@
 
 .btn-ers {
 	background-color: #f9b05c;
-	/* border-color: #707070; */
 	font-weight: 400;
 	color: #4a4b4b;
 }
@@ -95,7 +68,6 @@
 
 .btn-ersDone {
 	background-color: #39e04c;
-	/* border-color: #707070; */
 	font-weight: 400;
 	color: #4a4b4b;
 	border: solid #19cf2c 1px;
@@ -264,7 +236,7 @@
 .emoPrefControlPanel {
 	background-color: #e9ecef;
 	border-radius: 0.3em;
-	padding: 1em 1em;
+	padding: 0.25em 1em 1em 1em;
 	/* height: 900px; */
 }
 
@@ -274,6 +246,7 @@
 	color: #4a4b4b;
 	font-weight: 400;
 	font-size: small;
+	width: 90px;
 }
 
 .ersToggleBtn.disabled {
@@ -303,6 +276,7 @@
 	font-size: small;
 	background-color: #f9b05c !important;
 	color: #4a4b4b !important;
+	width: 90px;
 }
 
 .progress {
@@ -320,16 +294,16 @@
 
 
 .progress-bar {
-	background-color: #c9ccd5;
+	/* background-color: #c9ccd5; */
 	border-color: #8b8b8b;
 	border-width: 1px;
 	border-style: solid;
 	border-radius: 0.5em;
 }
 
-.emoStatbars>div:nth-child(even) .progress-bar {
-	background-color: #e4d8dc;
-}
+/* .emoStatbars>div:nth-child(even) .progress-bar {
+	background-color: #e4d8dd;
+} */
 
 .survey-question-block {
 	padding: 3px 9px 0 18px;
